# tarantool

./: '  .build.mk  .editorconfig  .flake8  .gdbinit  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab.mk  .gitmodules  .luacheckrc  .luacov  .pack.mk  .test.mk  .travis.mk  .travis.yml  AGENTS.md  AUTHORS  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CTestTestfile.cmake  Dockerfile.staticbuild  Doxyfile  Doxyfile.API.in  Jenkinsfile  LICENSE  Makefile  NOTICE  README  README.CentOS  README.DTrace  README.FreeBSD  README.FreeBSD.md  README.MacOSX  README.MacOSX.md  README.OpenBSD  README.OpenBSD.md  README.md  README.systemd.md  (+12 more)
client/: CMakeLists.txt
client/tarancheck/: CMakeLists.txt  tc_config.c  tc_file.h  tc_generate.c  tc_generate.h  tc_hash.h  tc_main.c  tc_options.c  tc_options.h  tc_space.c  tc_space.h  tc_verify.c  tc_verify.h
client/tarantar/: CMakeLists.txt  compat.c  config.c  cursor.c  cursor.h  indexate.c  indexate.h  key.h  main.c  options.c  options.h  ref.c  sha1.h  snapshot.c  space.c  space.h  ts.h  update.cc  update.h
client/tarantool/: CMakeLists.txt  FindReadline.cmake  FindTermcap.cmake  buf.c  buf.h  cli.c  cli.h  main.c  main.h  opt.c  opt.h  pager.c  pager.h  print.c  print_xlog.c  print_xlog.h  query.c  query.h  store.c  store.h  tc.c  tc.h  tc_admin.c  tc_admin.h  tc_buf.c  tc_buf.h  tc_cli.c  tc_cli.h  tc_opt.c  tc_opt.h  tc_pager.c  tc_pager.h  tc_print.c  tc_print.h  tc_print_snap.c  tc_print_snap.h  tc_print_xlog.c  tc_print_xlog.h  tc_query.c  tc_query.h  (+5 more)
client/tarantool_checksum/: CMakeLists.txt  mhash-val.h  tarantool.cfg  tc_config.h  tc_file.c  tc_generate.c  tc_hash.h  tc_key.h  tc_options.c  tc_options.h  tc_space.c  tc_space.h  tc_verify.c  tnt_checksum.cbp
client/tarantool_snap/: CMakeLists.txt  compat.c  config.c  config.h  cursor.c  hash.h  indexate.c  key.h  main.c  options.c  ref.c  ref.h  region.h  sha1.c  sha1.h  snapshot.c  snapshot.h  space.c  space.h  ts.h  update.cc
client/tc/: tc.c  tc.h  tc_admin.c  tc_admin.h  tc_cli.c  tc_opt.c  tc_print.c  tc_query.c  tc_query.h  tc_wal.c  tc_wal.h
client/tnt_bench/: CMakeLists.txt  tnt_bench.c  tnt_bench.h  tnt_bench_arg.c  tnt_bench_arg.h  tnt_bench_cb.c  tnt_bench_cb.h  tnt_bench_func.c  tnt_bench_func.h  tnt_bench_main.c  tnt_bench_opt.c  tnt_bench_opt.h  tnt_bench_plot.c  tnt_bench_plot.h  tnt_bench_redis.c  tnt_bench_redis.h  tnt_bench_stat.c  tnt_bench_stat.h  tnt_bench_test.c  tnt_bench_test.h
connector/c/: CMakeLists.txt  Doxyfile  README  client.c  client.h  tnt.c  tnt_buf.c  tnt_call.c  tnt_delete.c  tnt_insert.c  tnt_io.c  tnt_leb128.c  tnt_mem.c  tnt_memcache.c  tnt_memcache_val.c  tnt_opt.c  tnt_ping.c  tnt_recv.c  tnt_select.c  tnt_tuple.c  tnt_update.c
doc/: CMakeLists.txt  box-protocol.rst  box-protocol.txt  centos5-build.txt  changelogs.md  coding-style-python.txt  coding-style-shell.txt  coding-style.txt  index.html  requirements.txt  silverbox-protocol.txt  sql.txt  tnt.ent.cmake  wasm.md
doc/agents/: general-dev.md  replication-dev.md  replication-test.md  setup-dev.md
doc/developer/: CMakeLists.txt  developer.xml  html-highlight.xsl  intro.xml  tnt-html.xsl  tnt.css
doc/man/: CMakeLists.txt  tarantool.1  tarantool.pod  tarantool_box.1
doc/rfc/: 1148-stacked-diagnostics.md  2592-prepared-statement.md  3271-foreign-keys.md  3294-topology_discovering_protocol.md  3309-multi-directional-iterators.md  3309-multi-directional-iterators.notion.md  3328-wire_protocol.md  4182-persistent-lua-functions.md  5442-luajit-memory-profiler.md  5484-distributed-sql-ast.md  5857-inter-fiber-debugger.md  6200-lua-compat-module.md  781-lua-system-wide-profiler.md
doc/sphinx/: .gitignore  CMakeLists.txt  Makefile  box-protocol.rst  conf.py  conf.py.in  dev_guide.rst  directives.rst  faq.rst  getting_started.rst  index.rst  intro.rst  preface.rst  singlehtml.rst
doc/user/: CMakeLists.txt  client-reference.xml  configuration-reference.xml  connectors.xml  data-and-persistence.xml  data-model.xml  databases.xml  errcode.xml  html-highlight.xsl  iterator-types.xml  language-reference.xml  limitations.xml  lua-and-packages.xml  lua-tutorial.xml  namespace.xml  olinkdb.xml  os-install-notes.xml  persistence-architecture.xml  plugins.xml  preface.xml  proctitle.xml  replication.xml  server-administration.xml  space.xml  stored-procedures.xml  stored-programs.xml  target.db  tnt-fo.xsl  tnt-html-chunk.xsl  tnt-html-chunk.xsl.cmake  tnt-html.xsl  tnt-html.xsl.cmake  tnt.css  triggers.xml  (+3 more)
extra/: CMakeLists.txt  addopcodes.sh  apigen  bin2c.c  dependencies.yaml  deploy_key.enc  dist.lua  empty.snap  exports  exports_libcurl  exports_libfuzzer  fficdefgen.sh  lemon.c  lempar.c  logger.pl  mkdispatchtableh.sh  mkexports  mkkeywordhash.c  mkopcodec.sh  mkopcodec.tcl  mkopcodeh.sh  mkopcodeh.tcl  mkpragmatab.tcl  mksqlite3h.tcl  mksymbols  org.tarantool.in  osx-ecb-ev.patch  pack_lua  packpack-dont-decline-custom-version.patch  rpm.spec.in  schema_erase.lua  schema_fill.lua  static.py  tarantool  tarantool.rb  tarantool.spec.in  tarantool_box  tarantool_box.sh  tarantool_deploy.sh  tarantool_expand.sh  (+3 more)
mod/: CMakeLists.txt
perf/: CMakeLists.txt  allocator_perf.test.lua  arrow_ipc.cc  bps_tree.cc  common.h  debug_warning.h  hyperloglog.cc  light.cc  lineitem.c  lineitem.h  memtx.cc  mhash.cc  mp_datetime.cc  perf.h  tuple.c  tuple.cc
src/: CMakeLists.txt  admin.cc  admin.h  admin.m  admin.rl  asio.m  assoc.c  assoc.h  backtrace.cc  backtrace.h  bootstrap.h  bootstrap.snap  box_lua_info.m  box_lua_slab.h  box_lua_slab.m  box_lua_stat.h  box_lua_stat.m  bsdsocket.cc  bsdsocket.h  cbus.c  cbus.cc  cbus.h  cfg.c  cfg.cc  cfg.h  chain_exec.c  chain_exec.h  clock.c  clock.h  coeio.c  coeio.cc  coeio.h  coeio.m  coeio_file.c  coeio_file.cc  coeio_file.h  coio.cc  coio.h  coio.m  coio_buf.cc  (+227 more)
test/: .gitattributes  .tarantoolctl  CMakeLists.txt  Makefile  admin.py  cmdline.py  helper.lua  interactive_tarantool.lua  justrun.lua  luajit-test-init.lua  luatest_helpers.lua  par-test-run.py  parallel_test_suite.py  run  run.sh  small  tarantool  test-run.py  treegen.lua
(+9050 files in other folders)
